--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     ]
   },
   "devDependencies": {
-    "classnames": "^2.3.1"
+    "@testing-library/react-hooks": "^7.0.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
+    "classnames": "^2.3.1",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.2"
   }
 }
